--- a/.github/workflows/master_padlab3.yml
+++ b/.github/workflows/master_padlab3.yml
@@ -29,7 +29,7 @@ jobs:
         run: dotnet test
         
       - name: dotnet publish
-        run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp
+        run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp Lab3.Warehouse/Lab3.Warehouse.csproj
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
